--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
-    "lottie-react-native": "^7.2.2",
+    "lottie-react-native": "7.1.0",
     "lucide-react-native": "^0.476.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
