--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "reanimated-color-picker": "^3.0.6",
-    "tailwindcss": "3.4.17"
+    "tailwindcss": "3.4.17",
+    "expo-navigation-bar": "~4.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
