--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -55,7 +55,8 @@
     "react-native-webview": "13.12.5",
     "reanimated-color-picker": "^3.0.6",
     "tailwindcss": "3.4.17",
-    "expo-navigation-bar": "~4.0.8"
+    "expo-navigation-bar": "~4.0.8",
+    "expo-dev-client": "~5.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
