--- a/app.json
+++ b/app.json
@@ -76,7 +76,8 @@
             "backgroundColor": "#1B1B3A"
           }
         }
-      ]
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
