--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "reanimated-color-picker": "^3.0.6",
     "tailwindcss": "3.4.17",
     "expo-navigation-bar": "~4.0.8",
-    "expo-dev-client": "~5.0.12"
+    "expo-dev-client": "~5.0.12",
+    "expo-secure-store": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
