--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
     "expo-crypto": "~14.0.2",
+    "expo-dev-client": "~5.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
+    "expo-navigation-bar": "~4.0.8",
     "expo-router": "~4.0.17",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
@@ -54,10 +57,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "reanimated-color-picker": "^3.0.6",
-    "tailwindcss": "3.4.17",
-    "expo-navigation-bar": "~4.0.8",
-    "expo-dev-client": "~5.0.12",
-    "expo-secure-store": "~14.0.1"
+    "tailwindcss": "3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
